fixed logo on mobile

--- a/static/style.css
+++ b/static/style.css
@@ -98,7 +98,7 @@ nav.navbar-expand-sm {
   }
 
   #logo {
-    width: 40px;
+    width: 80px;
   }
 }
 
